# rusty-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs
src/rusty_python/: __init__.py  core.py  lib.py
src/tests/: test_all.py
