[build-system]
requires = ["maturin>=1.7,<2.0", "pytest"]
build-backend = "maturin"

[project]
name = "rusty-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "numpy"
]

[tool.maturin]
features = ["pyo3/extension-module"]
